syntax = "proto3";

package admin;

option go_package = "github.com/payment-platform/proto/admin;admin";

import "google/protobuf/timestamp.proto";

// Admin Service - 运营管理服务
service AdminService {
  // 管理员管理
  rpc CreateAdmin(CreateAdminRequest) returns (AdminResponse);
  rpc GetAdmin(GetAdminRequest) returns (AdminResponse);
  rpc ListAdmins(ListAdminsRequest) returns (ListAdminsResponse);
  rpc UpdateAdmin(UpdateAdminRequest) returns (AdminResponse);
  rpc DeleteAdmin(DeleteAdminRequest) returns (DeleteAdminResponse);
  rpc AdminLogin(AdminLoginRequest) returns (AdminLoginResponse);

  // 角色管理
  rpc CreateRole(CreateRoleRequest) returns (RoleResponse);
  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse);
  rpc UpdateRole(UpdateRoleRequest) returns (RoleResponse);
  rpc AssignRoleToAdmin(AssignRoleRequest) returns (AssignRoleResponse);

  // 权限管理
  rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse);
  rpc AssignPermissionToRole(AssignPermissionRequest) returns (AssignPermissionResponse);

  // 商户审核
  rpc ReviewMerchant(ReviewMerchantRequest) returns (ReviewMerchantResponse);
  rpc ListMerchantReviews(ListMerchantReviewsRequest) returns (ListMerchantReviewsResponse);

  // 系统配置
  rpc GetSystemConfig(GetSystemConfigRequest) returns (SystemConfigResponse);
  rpc UpdateSystemConfig(UpdateSystemConfigRequest) returns (SystemConfigResponse);
  rpc ListSystemConfigs(ListSystemConfigsRequest) returns (ListSystemConfigsResponse);

  // 审批流程
  rpc CreateApproval(CreateApprovalRequest) returns (ApprovalResponse);
  rpc ProcessApproval(ProcessApprovalRequest) returns (ApprovalResponse);
  rpc ListApprovals(ListApprovalsRequest) returns (ListApprovalsResponse);

  // 审计日志
  rpc ListAuditLogs(ListAuditLogsRequest) returns (ListAuditLogsResponse);
}

// 管理员相关消息
message Admin {
  string id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string phone = 5;
  string avatar = 6;
  string status = 7;  // active, disabled, locked
  bool is_super = 8;
  google.protobuf.Timestamp last_login_at = 9;
  string last_login_ip = 10;
  repeated Role roles = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

message CreateAdminRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string full_name = 4;
  string phone = 5;
  repeated string role_ids = 6;
}

message GetAdminRequest {
  string id = 1;
}

message ListAdminsRequest {
  int32 page = 1;
  int32 page_size = 2;
  string status = 3;
  string keyword = 4;
}

message ListAdminsResponse {
  repeated Admin admins = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message UpdateAdminRequest {
  string id = 1;
  string email = 2;
  string full_name = 3;
  string phone = 4;
  string status = 5;
  repeated string role_ids = 6;
}

message AdminResponse {
  Admin admin = 1;
}

message DeleteAdminRequest {
  string id = 1;
}

message DeleteAdminResponse {
  bool success = 1;
}

message AdminLoginRequest {
  string username = 1;
  string password = 2;
  string ip = 3;
}

message AdminLoginResponse {
  string token = 1;
  string refresh_token = 2;
  Admin admin = 3;
  int64 expires_in = 4;
}

// 角色相关消息
message Role {
  string id = 1;
  string name = 2;
  string display_name = 3;
  string description = 4;
  bool is_system = 5;
  repeated Permission permissions = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message CreateRoleRequest {
  string name = 1;
  string display_name = 2;
  string description = 3;
  repeated string permission_ids = 4;
}

message ListRolesRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListRolesResponse {
  repeated Role roles = 1;
  int32 total = 2;
}

message UpdateRoleRequest {
  string id = 1;
  string display_name = 2;
  string description = 3;
  repeated string permission_ids = 4;
}

message RoleResponse {
  Role role = 1;
}

message AssignRoleRequest {
  string admin_id = 1;
  repeated string role_ids = 2;
}

message AssignRoleResponse {
  bool success = 1;
}

// 权限相关消息
message Permission {
  string id = 1;
  string code = 2;
  string name = 3;
  string resource = 4;
  string action = 5;
  string description = 6;
}

message ListPermissionsRequest {
  string resource = 1;
}

message ListPermissionsResponse {
  repeated Permission permissions = 1;
}

message AssignPermissionRequest {
  string role_id = 1;
  repeated string permission_ids = 2;
}

message AssignPermissionResponse {
  bool success = 1;
}

// 商户审核相关消息
message MerchantReview {
  string id = 1;
  string merchant_id = 2;
  string review_type = 3;  // kyc, contract, qualification
  string status = 4;  // pending, approved, rejected
  string reviewer_id = 5;
  string reviewer_name = 6;
  string reason = 7;
  google.protobuf.Timestamp reviewed_at = 8;
  google.protobuf.Timestamp created_at = 9;
}

message ReviewMerchantRequest {
  string merchant_id = 1;
  string review_type = 2;
  string status = 3;  // approved, rejected
  string reason = 4;
  string reviewer_id = 5;
}

message ReviewMerchantResponse {
  MerchantReview review = 1;
}

message ListMerchantReviewsRequest {
  string merchant_id = 1;
  string status = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message ListMerchantReviewsResponse {
  repeated MerchantReview reviews = 1;
  int32 total = 2;
}

// 系统配置相关消息
message SystemConfig {
  string id = 1;
  string key = 2;
  string value = 3;
  string type = 4;  // string, number, boolean, json
  string category = 5;  // payment, notification, risk
  string description = 6;
  bool is_public = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message GetSystemConfigRequest {
  string key = 1;
}

message UpdateSystemConfigRequest {
  string key = 1;
  string value = 2;
  string description = 3;
}

message SystemConfigResponse {
  SystemConfig config = 1;
}

message ListSystemConfigsRequest {
  string category = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListSystemConfigsResponse {
  repeated SystemConfig configs = 1;
  int32 total = 2;
}

// 审批流程相关消息
message Approval {
  string id = 1;
  string flow_type = 2;  // withdrawal, refund, large_payment
  string resource_id = 3;
  string resource_type = 4;
  string applicant_id = 5;
  string applicant_name = 6;
  string status = 7;  // pending, approved, rejected
  int32 current_step = 8;
  int32 total_steps = 9;
  string approver_id = 10;
  string approver_name = 11;
  string reason = 12;
  string data = 13;  // JSON data
  google.protobuf.Timestamp approved_at = 14;
  google.protobuf.Timestamp created_at = 15;
}

message CreateApprovalRequest {
  string flow_type = 1;
  string resource_id = 2;
  string resource_type = 3;
  string applicant_id = 4;
  string data = 5;  // JSON data
}

message ProcessApprovalRequest {
  string id = 1;
  string approver_id = 2;
  string status = 3;  // approved, rejected
  string reason = 4;
}

message ApprovalResponse {
  Approval approval = 1;
}

message ListApprovalsRequest {
  string status = 1;
  string flow_type = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message ListApprovalsResponse {
  repeated Approval approvals = 1;
  int32 total = 2;
}

// 审计日志相关消息
message AuditLog {
  string id = 1;
  string admin_id = 2;
  string admin_name = 3;
  string action = 4;
  string resource = 5;
  string resource_id = 6;
  string method = 7;
  string path = 8;
  string ip = 9;
  string user_agent = 10;
  int32 response_code = 11;
  string description = 12;
  google.protobuf.Timestamp created_at = 13;
}

message ListAuditLogsRequest {
  string admin_id = 1;
  string resource = 2;
  string action = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
  int32 page = 6;
  int32 page_size = 7;
}

message ListAuditLogsResponse {
  repeated AuditLog logs = 1;
  int32 total = 2;
}
